# redy

./: README.md  package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: .env.example  models.py  settings.py  urls.py  views.py
backend/backend/migrations/: 0001_initial.py
backend/backend/src/: process_resume.py
front-end/: package-lock.json  package.json  tailwind.config.js
front-end/src/: environment.ts  index.html  styles.scss
front-end/src/app/: app.component.html  app.component.ts  app.routes.ts
front-end/src/app/models/: conversation-setup.model.ts
front-end/src/app/pages/counselling/: counselling.component.html  counselling.component.spec.ts  counselling.component.ts
front-end/src/app/pages/home/: home.component.html  home.component.ts
front-end/src/app/pages/home-carousel/: home-carousel.component.html  home-carousel.component.spec.ts  home-carousel.component.ts
front-end/src/app/pages/interview/: interview.component.html  interview.component.ts
front-end/src/app/pages/interview-options/: interview-options.component.html  interview-options.component.scss  interview-options.component.ts
front-end/src/app/pages/intro/: intro.component.html  intro.component.ts
front-end/src/app/pages/reusable-conversation/: reusable-conversation.component.html  reusable-conversation.component.spec.ts  reusable-conversation.component.ts
front-end/src/app/prompts/: prompt-template.ts
front-end/src/app/services/: conversation-websocket.service.ts  prompt.service.ts  resume.service.ts  settings.service.ts
(+14 files in other folders)
